// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.std.testdata.scopes;

option go_package = "namespacelabs.dev/foundation/std/testdata/scopes";

import "std/testdata/scopes/data/provider.proto";

message Input {}

message ScopedData {
    foundation.std.testdata.scopes.data.Data data = 1;
}